--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-; PlatformIO Project Configuration File
+; PlatformIO Project Configuration File HPA
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
