--- a/variants/heltec_ht_ct62_z004/platformio.ini
+++ b/variants/heltec_ht_ct62_z004/platformio.ini
@@ -3,7 +3,15 @@ extends = esp32c3_base
 board = esp32-c3-devkitm-1
 build_flags = 
   ${esp32c3_base.build_flags} -D PRIVATE_HW -I variants/heltec_ht_ct62_z004
-  -D HELTEC_HTCT62
+  -D HELTEC_HT62
+  -D MESHTASTIC_EXCLUDE_I2C=1
+  -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
+  -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
+  -D MESHTASTIC_EXCLUDE_SCREEN=1
+  -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
+  -D MESHTASTIC_EXCLUDE_WEBSERVER=1
+  -D HAS_TELEMETRY=0
+  -D HAS_SCREEN=0
   -I variants/heltec_ht_ct62_z004
 monitor_speed = 115200
 upload_protocol = esptool
