--- a/variants/tbeam/platformio.ini
+++ b/variants/tbeam/platformio.ini
@@ -7,6 +7,13 @@ lib_deps =
   ${esp32_base.lib_deps}
 build_flags = 
   ${esp32_base.build_flags} -D TBEAM_V10  -I variants/tbeam
+  
+  -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
+  -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
+  -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
+  -D MESHTASTIC_EXCLUDE_WEBSERVER=1
+  -D HAS_TELEMETRY=0
+
   -DGPS_POWER_TOGGLE ; comment this line to disable double press function on the user button to turn off gps entirely.
   -DBOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
